tdf#109061 : trim range references in formula on xlsx import

Trim large range reference(double reference) arguments
of formulas on importing from xlsx such that the
end-column <= MAXCOL rather than reporting a #NAME? error

For example, A2:BZZ2 is trimmed to A2:AMJ2

Tests added :
1. Added a formula result check test case for xlsx import and recalc
   in bugfix-test.cxx.
2. Added test for ScRange::Parse() for OOX grammar to ensure correct
   large range trimming.

Change-Id: I92c13fc8880af26ebfcc5d976718970fb0779001